# cpp_programming

cpp_general/C++ Tutorial - Project build system using CMake in ubuntu (for beginners)/: CMakeLists.txt  Makefile  README.md  README.txt  cmake_install.cmake
cpp_general/C++ Tutorial - Project build system using Make in ubuntu (for beginners)/: Makefile  README.txt
cpp_general/HelloWorld-codelite-cmake-linux/: Makefile  README.txt  build.sh
cpp_general/helloworld-g++/: hello.cpp
cpp_general_linux/HelloWorld-codelite-cmake-linux/: CMakeLists.txt
cpp_general_linux/helloworld-g++/: README.txt
cpp_revision_with_example/: cpp_revision_with_example.sln
cpp_revision_with_example/cpp_revision_with_example/: cpp_revision_with_example.vcxproj  cpp_revision_with_example.vcxproj.filters  main.cpp  myclasses.cpp  myclasses.h
cpp_tutorial_VS/: cpp_tutorial.sln  readme.txt
cpp_tutorial_VS/cpp_tutorial/: Person.cpp  Person.h  Polymorphism.cpp  Polymorphism.h  PostGradutatedStudent.cpp  PostGradutatedStudent.h  Student.h  main.cpp  martin_code_VS.vcxproj  martin_code_VS.vcxproj.filters  multipleinheritance.cpp  multipleinheritance.h  myclassespart1.cpp  myclassespart1.h
exception_handling/: exception_handling.sln
exception_handling/exception_handling/: exception_handling.vcxproj  main.cpp
opencv_cpp/opencv_build_linux/: README.txt
opencv_cpp/opencv_build_linux_diff_cmakelist/: CMakeLists.txt  README.txt
opencv_cpp/opencv_build_qt_windows/: main.cpp  readme.txt  (+1 more)
pointers_cpp/: pointers_cpp.sln
variables/: variables.sln
vo_martin_code_cmake_linux/: README.txt
(+18 files in other folders)
